Added nan checking

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "momo_wallet"
 version = "0.1.0"
 authors = ["km42 <kurtmueller42@gmail.com>"]
 
+[dependencies]
+serde_json = "1.0"
+num = "*"
+
 [dependencies.rocket]
 git = "https://github.com/SergioBenitez/Rocket"
 
